# metamodule-bidoo

./: CMakeLists.txt  plugin-mm.json
Bidoo/src/: ACNE.cpp  ANTN.cpp  BANCAU.cpp  BAR.cpp  BISTROT.cpp  BORDL.cpp  BidooComponents.hpp  CANARD.cpp  CHUTE.cpp  DFUZE.cpp  DIKTAT.cpp  DILEMO.cpp  DTROY.cpp  DUKE.cpp  EDSAROS.cpp  EMILE.cpp  ENCORE.cpp  FLAME.cpp  FORK.cpp  FREIN.cpp  HUITRE.cpp  LAMBDA.cpp  LATE.cpp  LIMBO.cpp  LIMONADE.cpp  LOURDE.cpp  MAGMA.cpp  MINIBAR.cpp  MOIRE.cpp  MS.cpp  OAI.cpp  OUAIVE.cpp  PERCO.cpp  PILOT.cpp  POUPRE.cpp  RABBIT.cpp  RATEAU.cpp  REI.cpp  SIGMA.cpp  SPORE.cpp  (+5 more)
Bidoo/src/dep/: quantizer.hpp  waves.cpp
Bidoo/src/dep/AudioFile/: AudioFile.h
Bidoo/src/dep/lodepng/: lodepng.h  lodepng_util.cpp  pngdetail.cpp
Bidoo/src/dep/osc/: wtOsc.h
Bidoo/src/dep/resampler/: main.cpp
metamodule-plugins/: Bidoo.mmplugin
src/: mutex-stub.hh
